--- a/package.json
+++ b/package.json
@@ -35,14 +35,14 @@
     "lastfm": "^0.9.2",
     "lob": "^3.9.0",
     "lusca": "^1.4.1",
-    "mongoose": "^4.6.6",
+    "mongoose": "^4.10.7",
     "morgan": "^1.7.0",
     "multer": "^1.2.0",
     "node-foursquare": "^0.3.0",
     "node-linkedin": "^0.5.4",
     "node-sass-middleware": "^0.11.0",
     "nodemailer": "^3.1.7",
-    "passport": "0.3.2",
+    "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-github": "^1.1.0",
     "passport-google-oauth": "^1.0.0",
