--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "postinstall": "npm rebuild node-sass"
   },
   "dependencies": {
+    "all": "0.0.0",
     "bcrypt-nodejs": "^0.0.3",
     "bluebird": "^3.4.7",
     "body-parser": "^1.15.2",
