--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-MONGODB_URI=mongodb://localhost:27017/test
-MONGOLAB_URI=mongodb://localhost:27017/test
+MONGODB_URI=mongodb://admin:admin@ds119750.mlab.com:19750/heroku_v390wxjk
+MONGOLAB_URI=mongodb://admin:admin@ds119750.mlab.com:19750/heroku_v390wxjk
 
 SESSION_SECRET=Your Session Secret goes here
 
