--- a/.env.example
+++ b/.env.example
@@ -26,8 +26,8 @@ GITHUB_SECRET=815aa4606f476444691c5f1c16b9c70da6714dc6
 TWITTER_KEY=6NNBDyJ2TavL407A3lWxPFKBI
 TWITTER_SECRET=ZHaYyK3DQCqv49Z9ofsYdqiUgeoICyh6uoBgFfu7OeYC7wTQKa
 
-GOOGLE_ID=828110519058.apps.googleusercontent.com
-GOOGLE_SECRET=JdZsIaWhUFIchmC1a_IZzOHb
+GOOGLE_ID=631061691827-vbreb1ap5kbq12inij9ao9p1cf41agls.apps.googleusercontent.com
+GOOGLE_SECRET=Iy9-HXKuc6Ag1c7NYvtGNZ9f
 
 LINKEDIN_ID=77chexmowru601
 LINKEDIN_SECRET=szdC8lN2s2SuMSy8
