--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lob": "^3.9.0",
     "lusca": "^1.4.1",
     "mongoose": "^4.10.7",
+    "mongoose-seed": "^0.3.2",
     "morgan": "^1.7.0",
     "multer": "^1.2.0",
     "node-foursquare": "^0.3.0",
